feat(auth): fix all tests, seed demo users, add error boundaries & toast migration [SEC-001]
- Fix 105+ test errors: mock JwtAuthenticationFilter doFilter passthrough,
  manual ObjectMapper with JavaTimeModule for @WebMvcTest, Spring Security 7
  403 vs 401 expectations
- Fix StudentSpecification null specs for Spring Data JPA 4.x (cb.conjunction)
- Fix StudentServiceTest EntityManager injection via ReflectionTestUtils
- Skip SchooolSysApplicationTests when DB unavailable
- Add V60 Flyway migration seeding 5 demo users with BCrypt passwords
- Update frontend demo login buttons with correct credentials
- Migrate 36 files from direct toast(sonner) to centralized notify helper
- Migrate useCaisse/useRelances from useToast to notify
- Add Zod auth-schema (login, forgot-password, reset-password validation)
- Add ErrorBoundary component wrapping App and all lazy-loaded routes
- Add 14 multi-tenancy unit tests (TenantContext, TenantFilter, TenantIdentifierResolver)
- Backend: 199 tests, 0 failures, 0 errors
- Frontend: TypeScript clean, build succeeds

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>